# quantify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
quantify/: constants.py
quantify/data/: manager.py  source.py  store.py
quantify/data/sources/: base.py
quantify/features/: base.py  technical.py
tests/: conftest.py
tests/data/: test_csv_source.py  test_data_manager.py  test_parquet_store.py  test_yfinance_source.py
tests/data/sources/: test_yfinance_source.py
tests/features/: test_technical.py
